projects/rylogic/Rylogic.Gfx/src/View3d/View3d.cs


		// Get/Set the object to world transform for the gizmo
		[DllImport(Dll)] private static extern m4x4 View3D_GizmoO2WGet(HGizmo gizmo);
		[DllImport(Dll)] private static extern void View3D_GizmoO2WSet(HGizmo gizmo, ref m4x4 o2w);

		// Get the offset transform that represents the difference between the gizmo's transform at the start of manipulation and now.
		[DllImport(Dll)] private static extern m4x4 View3D_GizmoOffsetGet(HGizmo gizmo);

		// Get/Set whether the gizmo is active to mouse interaction
		[DllImport(Dll)] private static extern bool View3D_GizmoEnabledGet(HGizmo gizmo);
		[DllImport(Dll)] private static extern void View3D_GizmoEnabledSet(HGizmo gizmo, bool enabled);

		// Returns true while manipulation is in progress
		[DllImport(Dll)] private static extern bool View3D_GizmoManipulating(HGizmo gizmo);

		// Diagnostics ****************************

		// Get/Set whether object bounding boxes are visible
		[DllImport(Dll)] private static extern bool View3D_DiagBBoxesVisibleGet(HWindow window);
		[DllImport(Dll)] private static extern void View3D_DiagBBoxesVisibleSet(HWindow window, bool visible);

		// Get/Set the length of the vertex normals
		[DllImport(Dll)] private static extern float View3D_DiagNormalsLengthGet(HWindow window);
		[DllImport(Dll)] private static extern void View3D_DiagNormalsLengthSet(HWindow window, float length);

		// Get/Set the colour of the vertex normals
		[DllImport(Dll)] private static extern Colour32 View3D_DiagNormalsColourGet(HWindow window);
		[DllImport(Dll)] private static extern void View3D_DiagNormalsColourSet(HWindow window, Colour32 colour);

		[DllImport(Dll)] private static extern v2 View3D_DiagFillModePointsSizeGet(HWindow window);
		[DllImport(Dll)] private static extern void View3D_DiagFillModePointsSizeSet(HWindow window, v2 size);

		// Miscellaneous **************************
		
		// Create a render target texture on a D3D9 device. Intended for WPF D3DImage
		[DllImport(Dll)] private static extern HTexture View3D_CreateDx9RenderTarget(HWND hwnd, uint width, uint height, ref TextureOptions options, out IntPtr shared_handle);

		// Create a Texture instance from a shared d3d resource (created on a different d3d device)
		[DllImport(Dll)] private static extern HTexture View3D_CreateTextureFromSharedResource(IntPtr shared_resource, ref TextureOptions options);

		// Return the supported MSAA quality for the given multi-sampling count
		[DllImport(Dll)] private static extern int View3D_MSAAQuality(int count, EFormat format);

		// Return true if the focus point is visible. Add/Remove the focus point to a window.
		[DllImport(Dll)] private static extern bool View3D_StockObjectVisibleGet(HWindow window, EStockObject stock_object);
		[DllImport(Dll)] private static extern void View3D_StockObjectVisibleSet(HWindow window, EStockObject stock_object, bool show);

		// Get/Set the size of the focus point
		[DllImport(Dll)] private static extern float View3D_FocusPointSizeGet(HWindow window);
		[DllImport(Dll)] private static extern void View3D_FocusPointSizeSet(HWindow window, float size);
		
		// Get/Set the size of the origin point
		[DllImport(Dll)] private static extern float View3D_OriginPointSizeGet(HWindow window);
		[DllImport(Dll)] private static extern void View3D_OriginPointSizeSet(HWindow window, float size);

		// Get/Set the position and size of the selection box
		[DllImport(Dll)] private static extern void View3D_SelectionBoxGet(HWindow window, out BBox box, out m4x4 o2w);
		[DllImport(Dll)] private static extern void View3D_SelectionBoxSet(HWindow window, ref BBox box, ref m4x4 o2w);

		// Set the selection box to encompass all selected objects
		[DllImport(Dll)] private static extern void View3D_SelectionBoxFitToSelected(HWindow window);

		// Create/Delete the demo scene in the given window
		[DllImport(Dll)] private static extern Guid View3D_DemoSceneCreateText(HWindow window);
		[DllImport(Dll)] private static extern Guid View3D_DemoSceneCreateBinary(HWindow window);
		[DllImport(Dll)] private static extern void View3D_DemoSceneDelete();
		
		// Show a window containing the demo script
		[DllImport(Dll)] private static extern void View3D_DemoScriptShow(HWindow window);

		// Return the example Ldr script as a BSTR
		[DllImport(Dll, CharSet = CharSet.Unicode)][return: MarshalAs(UnmanagedType.BStr)] private static extern string View3D_ExampleScriptBStr();

		// Return the auto complete templates as a BSTR
		[DllImport(Dll, CharSet = CharSet.Unicode)][return: MarshalAs(UnmanagedType.BStr)] private static extern string View3D_AutoCompleteTemplatesBStr();

		// Return the hierarchy "address" for a position in an ldr script file.
		[DllImport(Dll, CharSet = CharSet.Unicode)][return: MarshalAs(UnmanagedType.BStr)] private static extern string View3D_ObjectAddressAt([MarshalAs(UnmanagedType.LPWStr)] string ldr_script, long position);

		// Parse a transform description using the Ldr script syntax
		[DllImport(Dll, CharSet = CharSet.Ansi)] private static extern m4x4 View3D_ParseLdrTransform([MarshalAs(UnmanagedType.LPStr)] string ldr_script);

		// Handle standard keyboard shortcuts. 'key_code' should be a standard VK_ key code with modifiers included in the hi word. See 'EKeyCodes'
		[DllImport(Dll)] private static extern bool View3D_TranslateKey(HWindow window, EKeyCodes key_code);

		// Return the reference count of a COM interface
		[DllImport(Dll)] private static extern ulong View3D_RefCount(IntPtr pointer);

		// Tools **********************************

		// Show/Hide the object manager tool
		[DllImport(Dll)] private static extern bool View3D_ObjectManagerVisibleGet(HWindow window);
		[DllImport(Dll)] private static extern void View3D_ObjectManagerVisibleSet(HWindow window, bool show);

		// Show/Hide the script editor tool
		[DllImport(Dll)] private static extern bool View3D_ScriptEditorVisibleGet(HWindow window);
		[DllImport(Dll)] private static extern void View3D_ScriptEditorVisibleSet(HWindow window, bool show);

		// Show/Hide the measurement tool
		[DllImport(Dll)] private static extern bool View3D_MeasureToolVisibleGet(HWindow window);
		[DllImport(Dll)] private static extern void View3D_MeasureToolVisibleSet(HWindow window, bool show);

		// Show/Hide the angle measurement tool
		[DllImport(Dll)] private static extern bool View3D_AngleToolVisibleGet(HWindow window);
		[DllImport(Dll)] private static extern void View3D_AngleToolVisibleSet(HWindow window, bool show);

		// Show/Hide the lighting controls UI
		[DllImport(Dll)] private static extern void View3D_LightingControlsUI(HWindow window);

#if false

		// Camera
		[DllImport(Dll)]
		private static extern void View3D_CameraViewRectSet(HWindow window, float width, float height, float dist);
		[DllImport(Dll)]
		private static extern v2 View3D_ViewArea(HWindow window, float dist);

		// Materials
		[DllImport(Dll)]
		private static extern void View3D_TextureLoadSurface(HTexture tex, int level, [MarshalAs(UnmanagedType.LPWStr)] string tex_filepath, Rectangle[]? dst_rect, Rectangle[]? src_rect, EFilter filter, uint colour_key);
		[DllImport(Dll)]
		private static extern IntPtr View3D_TextureGetDC(HTexture tex, bool discard);
		[DllImport(Dll)]
		private static extern void View3D_TextureReleaseDC(HTexture tex);

		// Miscellaneous
		[DllImport(Dll)]
		private static extern void View3D_Flush();

		[DllImport(Dll)]
		private static extern HWND View3D_LdrEditorCreate(HWND parent);
		[DllImport(Dll)]
		private static extern void View3D_LdrEditorDestroy(HWND hwnd);
		[DllImport(Dll)]
		private static extern void View3D_LdrEditorCtrlInit(HWND scintilla_control, bool dark);
#endif
#endregion
	}
}
